syntax = "proto3";
option go_package = "./pbk;rpc";

package pb;



service LoginService{

rpc CheckPassword(LoginRequest) returns (LoginResponse) {}

}



message LoginRequest {

string Username = 1;

string Password = 2;

}



message LoginResponse {

string Ret = 1;

string err = 2;

}
